--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="flex space-x-2 mb-3">
                     <button onclick="selectAllAPIs(true)" class="px-2 py-1 bg-[#333] hover:bg-[#444] text-white text-xs rounded">全选</button>
                     <button onclick="selectAllAPIs(false)" class="px-2 py-1 bg-[#333] hover:bg-[#444] text-white text-xs rounded">全不选</button>
-                    <button onclick="selectAllAPIs(true, true)" class="px-2 py-1 bg-[#333] hover:bg-[#444] text-white text-xs rounded">全选普通资源</button>
+                    <button onclick="selectAllAPIs(true, true)" class="px-2 py-1 bg-[#333] hover:bg-[#444] text-white text-xs rounded">资源</button>
                 </div>
                 
                 <!-- API选择区域 - 使用滚动区域 -->
@@ -192,7 +192,10 @@
                         <h1 class="text-5xl font-bold gradient-text">6789TV</h1>
                     </a>
                 </div>
-                <p class="text-gray-400 mb-8">自由观影，畅享精彩</p>
+                <p class="text-gray-400 mb-8">
+                    自由观影，畅享精彩
+                    视频中出现的广告与本站无关，请勿相信或点击视频中的任何广告内容，谨防上当受骗。
+                </p>
             </header>
             
 
@@ -361,7 +364,7 @@
                     <strong class="text-blue-400">服务性质：</strong> 6789TV 仅提供视频搜索服务，不直接提供、存储或上传任何视频内容。所有搜索结果均来自第三方公开接口。
                 </p>
                 <p>
-                    <strong class="text-blue-400">用户责任：</strong> 用户在使用本站服务时，须遵守相关法律法规，不得利用搜索结果从事侵权行为，如下载、传播未经授权的作品等。
+                    <strong class="text-blue-400">用户责任：</strong> 用户在使用本站服务时，须遵守相关法律法规，不得利用搜索结果从事侵权行为，如下载、传播未经授权的作品等。用户对自身在平台上选择或搜索的内容承担责任。6789TV对用户行为或搜索结果与对结果阅览及用途不承担任何责任。
                 </p>
                 <p>
                     <strong class="text-blue-400">广告风险提示：</strong> 本站所有视频均来自第三方采集站，视频中出现的广告与本站无关，请勿相信或点击视频中的任何广告内容，谨防上当受骗。
