--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
                 </div>
                 <p class="text-gray-400 mb-8">
                     自由观影，畅享精彩
+                </p>
+                <p class="text-gray-400">
                     视频中出现的广告与本站无关，请勿相信或点击视频中的任何广告内容，谨防上当受骗。
                 </p>
             </header>
