--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                     自由观影，畅享精彩
                 </p>
                 <p class="text-gray-400">
+                    第一次需要点右上角齿轮设置数据源，否则无法搜索
+                </p>
+                <p class="text-gray-400">
                     视频中出现的广告与本站无关，请勿相信或点击视频中的任何广告内容，谨防上当受骗。
                 </p>
             </header>
