--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
                 <p class="text-gray-400 mb-8">
                     自由观影，畅享精彩
                 </p>
+                <p class="text-gray-400 mb-8">
+                    首次使用或无法搜索，请先点击右上角“齿轮”图标，选择数据源，然后点击“搜索”按钮。
+                </p>
                 <p class="text-gray-400">
                     视频中出现的广告与本站无关，请勿相信或点击视频中的任何广告内容，谨防上当受骗。
                 </p>
